Fix navbar covering content again

--- a/new_client/src/components/Header.css
+++ b/new_client/src/components/Header.css
@@ -1,6 +1,4 @@
 .navbar-custom-desk {
-  position: fixed;
-  z-index: 100;
   top: 0;
   left: 0;
   width: 100%;
